@startuml BankDatabase_BalAndTrans
!theme plain
skinparam entityStyle rectangle

entity "accounts" as accounts {
  *account_id : UUID <<PK>>
}

entity "balances" as balances {
  *balance_id : UUID <<PK>>
  account_id : UUID <<FK>>
  balance_type : TEXT
  amount : NUMERIC(18,2)
  currency : CHAR(3)
  credit_debit : TEXT
  reference_date : DATE
  created_at : TIMESTAMPTZ
}

note right of balances
** Insert a new row everytime to ensure audit trail of balance changes. **

Balance Types:
1. ClosingAvailable : End of day available balance
2. ClosingBooked : End of day booked balance
3. OpeningAvailable : Balance carried into start of day
4. InterimAvailable : Real-time available balance, during the day
https://www.iso20022.org/standardsrepository/type/BalanceTypeCode

At midnight (or end of banking day):
- Insert ClosingBooked balance per account.
- Insert ClosingAvailable balance per account.
- Next day 00:01, insert OpeningAvailable.
end note

entity "transactions" as transactions {
  *transaction_id : UUID <<PK>>
  account_id : UUID <<FK>>
  booking_datetime : TIMESTAMPTZ
  value_datetime : TIMESTAMPTZ
  amount : NUMERIC(18,2)
  currency : CHAR(3)
  credit_debit : TEXT
  transaction_type : TEXT
  description : TEXT
  merchant_name : TEXT
  merchant_category_code : CHAR(4)
  uetr : UUID
  status : TEXT
  created_at : TIMESTAMPTZ
}

note right of transactions
| transaction_id | account_id | booking_datetime | value_datetime | amount | currency | credit_debit | transaction_type | description | merchant_name | merchant_category_code | status |
| tx001 | acc01 | 2025-08-18 09:30 | 2025-08-18 09:30 | 50.00 | SGD | Debit | ATM Withdrawal | Cash withdrawal at POSB ATM | POSB | NULL | Booked |
| tx002 | acc01 | 2025-08-18 12:45 | 2025-08-18 12:45 | 12.50 | SGD | Debit | POS Purchase | Coffee at Starbucks | Starbucks | 5812 | Booked |
| tx003 | acc01 | 2025-08-18 14:20 | 2025-08-18 14:20 | 500.00 | SGD | Credit | Salary Credit | Salary from ABC Pte Ltd | ABC Pte Ltd | NULL | Booked |
| tx004 | acc01 | 2025-08-18 16:05 | 2025-08-18 16:05 | 120.00 | SGD | Debit | Online Transfer | Transfer to John Tan DBS 1234 | John Tan | NULL | Pending |
| tx005 | acc01 | 2025-08-18 17:45 | 2025-08-18 17:45 | 2.35 | SGD | Debit | Bank Fee | Monthly account maintenance fee | POSB | NULL | Booked |
end note

accounts ||--o{ balances : "has"
accounts ||--o{ transactions : "records"

@enduml